--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,2 +1,2 @@
 bin_PROGRAMS = testapp
-testapp_SOURCES = main.c implementation/*.c
+testapp_SOURCES = main.c implementation/list.c implementation/vector.c implementation/stack.c implementation/queue.c implementation/map.c
