Modified package name, updated README and corrected bug with vector#remove_at

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([amcdatastructures], [1.0], [david.muto@gmail.com])
+AC_INIT([cdatastructures], [1.0], [david.muto@gmail.com])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
